--- a/Common/Core/vtkVersionMacros.h.in
+++ b/Common/Core/vtkVersionMacros.h.in
@@ -20,7 +20,7 @@
 #define VTK_MAJOR_VERSION @VTK_MAJOR_VERSION@
 #define VTK_MINOR_VERSION @VTK_MINOR_VERSION@
 #define VTK_BUILD_VERSION @VTK_BUILD_VERSION@
-#define VTK_VERSION "@VTK_VERSION@"
+#define VTK_VERSION "@VTK_MAJOR_VERSION@.@VTK_MINOR_VERSION@.@VTK_BUILD_VERSION@"
 
 #define VTK_SOURCE_VERSION "vtk version " VTK_VERSION
 
